<resources>
    <string name="app_name" translatable="false">My Game List</string>
    <string name="button_addGame" translatable="false">Add Game</string>
    <string name="hint_gameTitle" translatable="false">Game Title</string>
    <string name="hint_gameDescription">Game Description</string>
    <string name="menu_addGame">Add</string>
    <string name="menu_cancelGame">Cancel</string>
    <string name="text_addBtn">Please Enter a title and description</string>
    <string name="button_saveReview">Save Review</string>
    <string name="search">Search</string>
    <string name="homepageImage">Homepage Image</string>
    <string name="my_listHomeButton">My List</string>
    <string name="databaseHomeButton">Enter Database</string>
    <string name="content_description_media">homepage image</string>
    <string name="databaseCardDescription">A list of all games located on our database</string>
    <string name="databaseCardTitle">Game Database</string>
    <string name="databaseCardSubTitle">Welcome to our collection of games</string>
    <string name="listCardDescription">A list of all your games</string>
    <string name="listCardTitle">My List</string>
    <string name="listCardSubTitle">This is the list of all your games added from our database</string>
    <string name="back">Exit</string>
    <string name="gameDetailsButton">Details</string>
    <string name="gameTitle" />
    <string name="gameRating">Rating :</string>
    <string name="gamesReleasedDate">Released:</string>
    <string name="Next">Next Page</string>
    <string name="sub_title">SubTitle</string>
    <string name="game_info">Game Info</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="playtime">Playtime:</string>
    <string name="description">Description</string>
    <string name="gametitle">gameTitle</string>
    <string name="button_addReview">Add review</string>
    <string name="hint_reviewDescription">Review description</string>
    <string name="hint_gameReviewTitle">Game title</string>
    <string name="menu_addReview" />
    <string name="updateReview">Update</string>
    <string name="button_updateReview">Update review</string>
    <string name="reviewCardTitle">My reviews</string>
    <string name="reviewCardSubTitle">This is a list of all your reviews</string>
    <string name="reviewsCardDescription">Reviews of you favourite games</string>
    <string name="my_reviewsHomeButton">My Reviews</string>
    <string name="delete">Delete</string>
    <string name="review_rating">Rating</string>
    <string name="review_released">Released</string>
    <string name="hint_gameReviewDescription">Review Text</string>
    <string name="MyGameListAppIcon">MyGameListIcon</string>
    <string name="hint_reviewImageUrl">Image Url</string>
    <string name="review_UpdatedImage">UpdatedImage</string>
    <string name="review_game_id">gameId</string>
</resources>