<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ReviewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/silver"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/reviewImageView"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    />

                <TextView
                    android:id="@+id/reviewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/hint_gameReviewTitle"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/reviewRating"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/review_rating"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/reviewReleased"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/review_released"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/reviewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_reviewDescription"
                    android:inputType="textMultiLine"
                    android:lines="12"
                    android:maxLines="12"
                    android:minLines="6"
                    android:padding="8dp"
                    android:maxLength="551"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:scrollbars="vertical"
                    android:background="@color/reviewGrey"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addReview"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/reviewImageUrl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/hint_reviewImageUrl"
                    android:visibility="invisible"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/reviewGameId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/review_game_id"
                    android:visibility="invisible"
                    android:padding="8dp"
                    android:textSize="14sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>