<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.wit.pcgamelist.activities.HomeActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/silver"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/databaseCard"
            android:layout_width="match_parent"
            android:layout_height="405dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="416dp"
                android:background="@color/silver"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/databaseImg"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:contentDescription="@string/content_description_media"
                    android:scaleType="centerCrop"
         />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/databaseCardTitle"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/gold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/databaseCardSubTitle"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/databaseCardDescription"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <!-- Buttons -->
                <Button
                    android:id="@+id/buttonDetailsOfSingle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="?attr/borderlessButtonStyle"
                        android:id="@+id/databaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/databaseHomeButton"
                        android:textColor="#DDC8FF" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/listCard"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="495dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="396dp"
                android:background="@color/silver"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/listImg"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:contentDescription="@string/content_description_media"
                    android:scaleType="centerCrop"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/listCardTitle"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/gold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/listCardSubTitle"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/listCardDescription"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <!-- Button -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="?attr/borderlessButtonStyle"
                        android:id="@+id/myListButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_listHomeButton"
                        android:layout_marginEnd="8dp"
                        android:textColor="#DDC8FF" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>






