<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ReviewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/silver"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reviewUpdatedTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/hint_gameReviewTitle"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/reviewUpdatedRating"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/review_rating"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/reviewUpdatedReleased"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:hint="@string/review_released"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/reviewUpdatedDescription"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_reviewDescription"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:background="@color/grey"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>